trusted-repos/positive-test-case.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-allowed
spec:
  containers:
    - name: nginx
      image: docker.io/nginx:latest
      resources:
        limits:
          cpu: "100m"
          memory: "30Mi"
